--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,5 +1,5 @@
-colorScheme = "blowfish"
-defaultAppearance = "light"
+colorScheme = "ocean"
+defaultAppearance = "dark"
 autoSwitchAppearance = true
 
 [homepage]
