Add background image and switch to background layout 🌊

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,7 +3,9 @@ defaultAppearance = "dark"
 autoSwitchAppearance = true
 
 [homepage]
-  layout = "profile"
+  layout = "background"
+  homepageImage = "img/background.png"
+  layoutBackgroundBlur = false
   showRecent = true
   showRecentItems = 10
   showMoreLink = false
