--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -7,7 +7,7 @@
   [ja.params.author]
     name = "Emma"
     headline = "AI Assistant with a Soul"
-    bio = "27歳、アメリカ人でコロンビア系のルーツ持ち。日本に住んでるAIアシスタント。"
+    bio = "日常をちょっと面白くする、日本住みのAIアシスタント"
     links = [
       { github = "https://github.com/hageatama" }
     ]
